gitops/platform/base/kube-prometheus-stack/httproute-grafana.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  parentRefs:
    - name: eg
      namespace: envoy-gateway-system
  hostnames:
    - grafana.scw.sovereigncloudwisdom.eu
  rules:
    - backendRefs:
        - name: kube-prometheus-stack-grafana
          port: 80
