gitops/platform/base/kube-prometheus-stack/network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: grafana
  namespace: monitoring
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: grafana
  ingress:
    # Envoy Gateway proxy
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: envoy
            k8s:io.kubernetes.pod.namespace: envoy-gateway-system
      toPorts:
        - ports:
            - port: "3000"
              protocol: TCP
  egress:
    # DNS
    - toEndpoints:
        - matchLabels:
            k8s-app: kube-dns
            k8s:io.kubernetes.pod.namespace: kube-system
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
    # Prometheus
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: prometheus
      toPorts:
        - ports:
            - port: "9090"
              protocol: TCP
    # Loki
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: loki
      toPorts:
        - ports:
            - port: "3100"
              protocol: TCP
    # Tempo
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: tempo
      toPorts:
        - ports:
            - port: "3200"
              protocol: TCP
    # Scaleway Cockpit (external datasources)
    - toFQDNs:
        - matchPattern: "*.cockpit.fr-par.scw.cloud"
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: prometheus
  namespace: monitoring
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: prometheus
  ingress:
    # Grafana queries
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: grafana
      toPorts:
        - ports:
            - port: "9090"
              protocol: TCP
  egress:
    # DNS
    - toEndpoints:
        - matchLabels:
            k8s-app: kube-dns
            k8s:io.kubernetes.pod.namespace: kube-system
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
    # Scrape targets within monitoring namespace
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: alertmanager
      toPorts:
        - ports:
            - port: "9093"
              protocol: TCP
            - port: "8080"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: grafana
      toPorts:
        - ports:
            - port: "3000"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: kube-state-metrics
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: kube-prometheus-stack-prometheus-operator
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
    # Scrape Alloy metrics
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: alloy
      toPorts:
        - ports:
            - port: "12345"
              protocol: TCP
    # Scrape kubelet and apiserver (kube-system, via host network)
    - toEntities:
        - host
        - remote-node
      toPorts:
        - ports:
            - port: "10250"
              protocol: TCP
            - port: "6443"
              protocol: TCP
    # Alertmanager (send alerts)
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: alertmanager
      toPorts:
        - ports:
            - port: "9093"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: alertmanager
  namespace: monitoring
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: alertmanager
  ingress:
    # Prometheus sends alerts
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: prometheus
      toPorts:
        - ports:
            - port: "9093"
              protocol: TCP
            - port: "8080"
              protocol: TCP
  egress:
    # DNS
    - toEndpoints:
        - matchLabels:
            k8s-app: kube-dns
            k8s:io.kubernetes.pod.namespace: kube-system
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: kube-state-metrics
  namespace: monitoring
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: kube-state-metrics
  ingress:
    # Prometheus scraping
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: prometheus
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
  egress:
    # DNS
    - toEndpoints:
        - matchLabels:
            k8s-app: kube-dns
            k8s:io.kubernetes.pod.namespace: kube-system
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
    # K8s API server (reads cluster state)
    - toEntities:
        - host
        - remote-node
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: prometheus-operator
  namespace: monitoring
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: kube-prometheus-stack-prometheus-operator
  ingress:
    # Prometheus scraping operator metrics
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: prometheus
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
  egress:
    # DNS
    - toEndpoints:
        - matchLabels:
            k8s-app: kube-dns
            k8s:io.kubernetes.pod.namespace: kube-system
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
    # K8s API server (manages Prometheus/Alertmanager CRs)
    - toEntities:
        - host
        - remote-node
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
